--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
     kapt "androidx.room:room-compiler:$version_room"
     implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
 
+    //Material Design
+    implementation 'com.google.android.material:material:1.1.0'
 }
