--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,5 +86,5 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
 
     //Material Design
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation "com.google.android.material:material:1.1.0"
 }
