--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 
     //Network
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.9.1"
     implementation 'com.squareup.picasso:picasso:2.71828'
 
@@ -85,6 +85,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$version_room"
     kapt "androidx.room:room-compiler:$version_room"
     implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
+    implementation "androidx.room:room-ktx:$version_room"
 
     //Material Design
     implementation "com.google.android.material:material:1.1.0"
