--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,10 @@ dependencies {
 
     //Material Design
     implementation "com.google.android.material:material:1.1.0"
+
+    // Retrofit Coroutines Support
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.8.0"
 }
